--- a/easy_backflow.html
+++ b/easy_backflow.html
@@ -132,7 +132,7 @@
     @media (max-width: 720px){
       .navlinks{display:none}
       .mobile-toggle{display:inline-flex;align-items:center;gap:8px;border:1px solid #e5ecf6;background:#fff;padding:10px 12px;border-radius:10px}
-      .hero .inner{padding:80px 0 56px}
+      .hero .inner{padding:24px 30px 56px}
       .hero h1{font-size:36px}
       .grid.cols-3,.grid.cols-4{grid-template-columns:1fr}
       .pricing{grid-template-columns:1fr}
