--- a/easy_backflow.html
+++ b/easy_backflow.html
@@ -122,14 +122,16 @@
     .footbar{border-top:1px solid rgba(255,255,255,.08);padding:16px 0;color:#93a8c3}
 
     /* Responsive */
-    @media (max-width: 1024px){
+    /*@media (max-width: 1024px){
       .grid.cols-4{grid-template-columns:repeat(2,1fr)}
       .steps{grid-template-columns:repeat(2,1fr)}
       .pricing{grid-template-columns:repeat(2,1fr)}
       .testimonials{grid-template-columns:repeat(2,1fr)}
       .area{grid-template-columns:1fr}
     }
-    @media (max-width: 720px){
+    @media (max-width: 720px){*/
+      
+    @media (max-width: 1260px){
       .navlinks{display:none}
       .mobile-toggle{display:inline-flex;align-items:center;gap:8px;border:1px solid #e5ecf6;background:#fff;padding:10px 12px;border-radius:10px}
       .hero .inner{padding:24px 30px 56px}
