--- a/websites.html
+++ b/websites.html
@@ -36,7 +36,7 @@
   <header class="sticky top-0 z-30 bg-white/80 backdrop-blur-md border-b border-slate-200">
     <div class="container mx-auto px-6 lg:px-12 py-4 flex items-center justify-between">
       <a href="#" class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-lg bg-primary flex items-center justify-center text-white font-bold">BS</div>
+        <div class="w-10 h-10 rounded-lg bg-primary flex items-center justify-center text-white font-bold">CB</div>
         <div>
           <h1 class="text-lg font-semibold">Cryptoball</h1>
           <p class="text-xs text-slate-500 -mt-0.5">websites for small businesses</p>
