Updated websites.html with link to Website Sampmles

--- a/websites.html
+++ b/websites.html
@@ -141,6 +141,12 @@
       <h3 class="text-2xl font-semibold">Recent sites</h3>
       <p class="mt-2 text-slate-600">A few quick examples — real sites launched in days.</p>
 
+      <p class="mt-3">
+        <a href="Website-Samples" class="inline-flex items-center text-accent font-medium hover:underline">
+          👉 View live website samples
+        </a>
+      </p>
+
       <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Card 1 -->
         <div class="bg-white rounded-xl overflow-hidden border">
