--- a/websites.html
+++ b/websites.html
@@ -140,13 +140,6 @@
     <section id="portfolio" class="mt-16 container mx-auto px-6 lg:px-12">
       <h3 class="text-2xl font-semibold">Recent sites</h3>
       <p class="mt-2 text-slate-600">A few quick examples — real sites launched in days.</p>
-
-      <p class="mt-3">
-        <a href="Website-Samples" class="inline-flex items-center text-accent font-medium hover:underline">
-          👉 View live website samples
-        </a>
-      </p>
-
       <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Card 1 -->
         <div class="bg-white rounded-xl overflow-hidden border">
@@ -173,6 +166,13 @@
           </div>
         </div>
       </div>
+
+      <p class="mt-3">
+        <a href="Website-Samples" class="inline-flex w-full items-center justify-center gap-2 px-4 py-3 rounded-md border border-slate-200 bg-primary text-white hover:bg-slate-50 hover:text-slate-800">
+          View More Websites>>
+        </a>
+      </p>
+
     </section>
 
     <!-- Pricing -->
