Added links to top 3 new websites.

--- a/websites.html
+++ b/websites.html
@@ -143,27 +143,33 @@
       <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Card 1 -->
         <div class="bg-white rounded-xl overflow-hidden border">
-          <img src="https://images.unsplash.com/photo-1503602642458-232111445657?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="portfolio 1" class="w-full h-36 object-cover">
-          <div class="p-4">
-            <h4 class="font-semibold">Green Leaf Bakery</h4>
-            <p class="text-sm text-slate-500 mt-1">Menu, hours, and online ordering link.</p>
-          </div>
+          <a href="Website-Samples/bakery">
+            <img src="Website-Samples/screenshots/bakery-desktop.png" alt="portfolio 1" class="w-full h-36 object-cover">
+            <div class="p-4">
+              <h4 class="font-semibold">Green Leaf Bakery</h4>
+              <p class="text-sm text-slate-500 mt-1">Menu, hours, and online ordering link.</p>
+            </div>
+          </a>
         </div>
         <!-- Card 2 -->
         <div class="bg-white rounded-xl overflow-hidden border">
-          <img src="https://images.unsplash.com/photo-1483729558449-99ef09a8c325?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="portfolio 2" class="w-full h-36 object-cover">
-          <div class="p-4">
-            <h4 class="font-semibold">Main Street Plumbing</h4>
-            <p class="text-sm text-slate-500 mt-1">Service list and emergency contact button.</p>
-          </div>
+          <a href="Website-Samples/plumbing">
+            <img src="Website-Samples/screenshots/plumbing-desktop.png" alt="portfolio 2" class="w-full h-36 object-cover">
+            <div class="p-4">
+              <h4 class="font-semibold">Main Street Plumbing</h4>
+              <p class="text-sm text-slate-500 mt-1">Service list and emergency contact button.</p>
+            </div>
+          </a>
         </div>
         <!-- Card 3 -->
         <div class="bg-white rounded-xl overflow-hidden border">
-          <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="portfolio 3" class="w-full h-36 object-cover">
-          <div class="p-4">
-            <h4 class="font-semibold">Bright Tattoo Studio</h4>
-            <p class="text-sm text-slate-500 mt-1">Portfolio gallery and contact form.</p>
-          </div>
+          <a href="Website-Samples/tattoo">
+            <img src="Website-Samples/screenshots/tattoo-desktop.png" alt="portfolio 3" class="w-full h-36 object-cover">
+            <div class="p-4">
+              <h4 class="font-semibold">Bright Tattoo Studio</h4>
+              <p class="text-sm text-slate-500 mt-1">Portfolio gallery and contact form.</p>
+            </div>
+          </a>
         </div>
       </div>
 
